--- a/_data/news.yml
+++ b/_data/news.yml
@@ -5,3 +5,4 @@
 - date: 01/02/2024
   title: We are organizing the 1st workshop on "Reclaiming the Narrative: Digital Recovery, AI & Mitigating Harm in Social Media" @icwsm!  
   url: https://sites.google.com/view/reclaiming-the-narrative/
+  image: https://images.theconversation.com/files/572027/original/file-20240129-15-6x4k1s.jpg
