--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,6 +3,6 @@
   title: Teens on social media need both protection and privacy – AI could help get the balance right
   url: https://theconversation.com/teens-on-social-media-need-both-protection-and-privacy-ai-could-help-get-the-balance-right-222052
 - date: 01/02/2024
-  title: We are organizing the 1st workshop on Reclaiming the Narrative Digital Recovery, AI & Mitigating Harm in Social Media @icwsm!  
+  title: We are organizing the 1st workshop on "Reclaiming the Narrative Digital Recovery, AI & Mitigating Harm in Social Media" @icwsm!  
   url: https://sites.google.com/view/reclaiming-the-narrative/
   image: https://images.theconversation.com/files/572027/original/file-20240129-15-6x4k1s.jpg
