updated Johns data and added PDFs

--- a/_data/directors.yml
+++ b/_data/directors.yml
@@ -23,7 +23,7 @@
 - description: 'Assistant Professor
 
 
-    HCI, Informatics, Privacy'
+    Humanistic HCI, Privacy, Ontology, Social Computing, STS'
   email: john.s.seberger@drexel.edu
   googlescholar: 6AkP0EcAAAAJ
   image: assets/theme/images/john.jpg
