--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: March 2024
+  title: DONUTS researchers involved in four accepted papers at CHI’24! 
 - date: Feb 2024
   title: We are organizing the 1st workshop on "Reclaiming the Narrative Digital Recovery, AI & Mitigating Harm in Social Media" @icwsm! 
   url: https://sites.google.com/view/reclaiming-the-narrative/
@@ -6,12 +8,12 @@
 - date: Jan 2024
   title: New Paper accepted at EACL 2024 on the analysis of narrativity in podcast data
 - date: Feb 2024
-  title: I am excited that we have four papers and one LBW accepted at CHI 2024
+  title: We are excited that we have four papers and one LBW accepted at CHI 2024!
 - date: Jan 2024
-  title: I was interviewed by NBC-10 News about the congress hearing about social media and the risks to young people (beginning at 14:34)
+  title: Dr. Afsaneh Razi was interviewed by NBC-10 News about the congress hearing about social media and the risks to young people (beginning at 14:34)
   url: https://www.nbcphiladelphia.com/news/local/nbc10-issue/nbc10-issue-spending-plan-preview/3766249/
 - date: Jan 2024
-  title: Read my article at The Conversation
+  title: Read Dr. Afsaneh Razi article at The Conversation
   url: https://theconversation.com/teens-on-social-media-need-both-protection-and-privacy-ai-could-help-get-the-balance-right-222052
 - date: Nov 2023
   title: We have two papers accepted at ACM CSCW 2024!
