--- a/_data/phds.yml
+++ b/_data/phds.yml
@@ -37,6 +37,7 @@
   github: elhamaghakhani
   email: elham.aghakhani@drexel.edu
   linkedin: elham-aghakhani
+  website: https://elhamaghakhani.github.io/
 
 - name: Atieh Armin
   # role: Director
