--- a/_data/phdstudents.yml
+++ b/_data/phdstudents.yml
@@ -20,6 +20,7 @@
   image: assets/theme/images/elham.jpg
   linkedin: elham-aghakhani
   name: Elham Aghakhani
+  website: https://elhamaghakhani.github.io/
 - description: Computational social science, NLP, Network science
   email: aria.pessianzade@drexel.edu
   googlescholar: 9XOCsOUAAAAJ
