--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: April 2024
+  title: DONUTS researchers’ paper has received an Honorable Mention at CHI’24!🎉 
+  url: https://programs.sigchi.org/chi/2024/program/content/146940
 - date: March 2024
   title: DONUTS researchers involved in four accepted papers at CHI’24!🎉 
 - date: Feb 2024
