--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: April 2024
-  title: Two papers from DONUTS researchers have received an Honorable Mention at CHI’24! 🎉
+  title: Two papers from DONUTS researchers have received Honorable Mentions at CHI’24! 🎉
 - date: March 2024
   title: DONUTS researchers involved in four accepted papers at CHI’24!🎉 
 - date: Feb 2024
