--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,12 +1,8 @@
 - date: May 2024
   title: Dr. Shadi Rezapour Discusses the Impact of AI’s "Data Rush" in a Q&A with Drexel News!
   url: https://newsblog.drexel.edu/2024/05/14/qa-what-are-the-consequences-of-ais-data-rush/
-  - date: April 2024
-  title: The paper from Dr. Razi have received an Honorable Mention at CHI’24! 🎉
-  # url: https://github.com/donuts-test/donuts-test.github.io/blob/main/Donuts_Colab_Publications_PDF/Creating%20a%20Research%20Agenda%20for%20Human-Centered%20Real-Time%20Risk%20Detection%20on%20Social%20Media%20Platforms.pdf
-# - date: April 2024
-#   title: The paper from DONUTS researchers (Dr. Seberger and Dr. Razi) have received an Honorable Mention at CHI’24! 🎉
-  # url: https://github.com/donuts-test/donuts-test.github.io/blob/main/Donuts_Colab_Publications_PDF/For_Me_or_Not_for_Me__CHI_2024-1.pdf
+- date: April 2024
+  title: Two papers from DONUTS researchers have received Honorable Mentions at CHI’24! 🎉
 - date: March 2024
   title: DONUTS researchers involved in four accepted papers at CHI’24!🎉 
 - date: Feb 2024
