--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,10 +2,11 @@
   title: Dr. Shadi Rezapour Discusses the Impact of AI’s "Data Rush" in a Q&A with Drexel News!
   url: https://newsblog.drexel.edu/2024/05/14/qa-what-are-the-consequences-of-ais-data-rush/
 - date: April 2024
-  title: A paper from Dr. Razi have received Honorable Mention at CHI’24! 🎉
-  url: Donuts_Colab_Publications_PDF/For_Me_or_Not_for_Me__CHI_2024-1.pdf
+  title: A paper from Dr. Razi have received an Honorable Mention at CHI’24! 🎉
+  url: https://stirlab.org/wp-content/uploads/Alsoubai_CHI_2024.pdf
 - date: April 2024
-  title: Two papers from DONUTS researchers have received Honorable Mentions at CHI’24! 🎉
+  title: A paper from DONUTS researchers (Dr. Seberger and Dr. Razi) have received an Honorable Mention at CHI’24! 🎉
+  url: Donuts_Colab_Publications_PDF/For_Me_or_Not_for_Me__CHI_2024-1.pdf
 - date: March 2024
   title: DONUTS researchers involved in four accepted papers at CHI’24!🎉 
 - date: Feb 2024
