--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: May 2024
-  title: Dr. Shadi Rezapour Discusses the Impact of AI’s "Data Rush" in a Q&A with Drexel News!
+  title: Dr. Rezapour Discusses the Impact of AI’s "Data Rush" in a Q&A with Drexel News!
   url: https://newsblog.drexel.edu/2024/05/14/qa-what-are-the-consequences-of-ais-data-rush/
 - date: April 2024
   title: A paper from Dr. Razi has received an Honorable Mention at CHI’24! 🎉
