--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,7 +2,7 @@
   title: Dr. Rezapour Discusses the Impact of AI’s "Data Rush" in a Q&A with Drexel News!
   url: https://newsblog.drexel.edu/2024/05/14/qa-what-are-the-consequences-of-ais-data-rush/
 - date: April 2024
-  title: A paper co-authored by Dr. Razi and collaborators has received an Honorable Mention at CHI’24! 🎉
+  title: A paper co-authored by Dr. Razi has received an Honorable Mention at CHI’24! 🎉
   url: https://stirlab.org/wp-content/uploads/Alsoubai_CHI_2024.pdf
 - date: April 2024
   title: A paper from DONUTS researchers (Dr. Seberger and Dr. Razi) has received an Honorable Mention at CHI’24! 🎉
