--- a/_data/phds.yml
+++ b/_data/phds.yml
@@ -11,7 +11,7 @@
   github: labouz
   email: layla.bzb@gmail.com
   linkedin: layla-bouzoubaa
-  website: https://www.laylab.me/
+  website: https://www.laylab.net/
 
 - name: Sanonda Datta Gupta
   # role: Director
