--- a/_data/phdstudents.yml
+++ b/_data/phdstudents.yml
@@ -37,6 +37,10 @@
   twitter: HalflingWizard_
   website: https://halflingwizard.github.io/
   youtube: HalflingWizard
+- description: Health and wellbeing, machine learning, online social support, online safety
+  email: jym29@drexel.edu
+  image: assets/theme/images/jessica.jpg
+  name: Jessica Medina
 - description: Cybersecurity, Artificial Intelligence, Machine Learning, Online Safety, and Privacy
   email: nb899@drexel.edu
   image: assets/theme/images/nirav.jpg
