--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: Oct 2024
-  title: Sanonda Gupta, lab PhD student, gives a talk at Elkins Park Library on the ethical implications of ChatGPT! 🎉
+  title: Sanonda Gupta, lab PhD student, gives a talk at Elkins Park Library on the ethical implications of ChatGPT! 🎤
 - date: May 2024
   title: Dr. Rezapour Discusses the Impact of AI’s "Data Rush" in a Q&A with Drexel News!
   url: https://newsblog.drexel.edu/2024/05/14/qa-what-are-the-consequences-of-ais-data-rush/
