change layla email on phds.yml

--- a/_data/phds.yml
+++ b/_data/phds.yml
@@ -9,7 +9,7 @@
   twitter: bouzoulay
   # mastodon: https://mastodon.social/@mastodon_username
   github: labouz
-  email: layla.bzb@gmail.com
+  email: lb3338@drexel.edu
   linkedin: layla-bouzoubaa
   website: https://www.laylab.net/
 
