--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: Dec 2024
+  title: AI Helping Us Choose Words More Thoughtfully in Addiction Contexts – Donuts Researchers Explain!
+  url: https://drexel.edu/news/archive/2024/December/LLM-substance-use-disorder-stigmatizing-language
 - date: Oct 2024
   title: Sanonda datta Gupta and Dr. John S. Seberger gave a talk on the ethical implications of ChatGPT at Elkins Park Library! 🎤
 - date: May 2024
