--- a/_data/phdstudents.yml
+++ b/_data/phdstudents.yml
@@ -7,12 +7,12 @@
   name: Layla Bouzoubaa
   twitter: bouzoulay
   website: https://www.laylab.net/
-- description: Trust, Ethics, and Privacy in HCI, and Ontological Modeling
+- description: HCI, Sociotechnical Entanglements, Algorithmic Systems, Posthumanism and Ontological Modeling
   email: sanonda.datta.gupta@drexel.edu
   googlescholar: J4CgkboAAAAJ
   image: assets/theme/images/sanonda.jpg
   name: Sanonda Datta Gupta
-  website: https://sites.google.com/view/sanondagupta147/sanonda-datta-gupta
+  website: https://sites.google.com/view/sanondadgupta
 - description: Artificial Intelligence, Machine Learning, Natural Language Processing
     (NLP)
   email: elham.aghakhani@drexel.edu
